# Artificial-Life

./: .clang-format  .gitignore  CMakeLists.txt  README.md  artificial_life.cc
app/: artificial_life.cc
app/gui/: mainwindow.ui
app/include/: mainwindow.h
app/src/: mainwindow.cc
include/: carnivore.h  field.h  game.h  herbivore.h  map.h  specimen.h
src/: artificial_life.cc  carnivore.cc  field.cc  game.cc  herbivore.cc  map.cc  specimen.cc
tests/: carnivore.cc  field.cc  fieldTest.cc  game.cc  gameTest.cc  herbivore.cc  map.cc
